# python-app-kubernetes-deploy

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
helm/python-api/: Chart.yaml  values-sensitive.yaml.example  values.yaml
helm/python-api/dashboards/: python-api-dashboard.json
helm/python-api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  prometheusrule.yaml  secretstore.yaml  service-postgres.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: config.py  database.py  main.py  models.py  routes.py  schemas.py  tools.py
terraform/: .terraform.lock.hcl  main.tf
terraform/modules/google-gke-service-account/: main.tf  outputs.tf  variables.tf
