[project]
name = "simple-restful-api"
version = "1.0.0"
description = "Simple User Management REST API"
authors = [
    {name = "Zakhar Savchyn",email = "zakhar.savchyn.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.12",
    "alembic>=1.17.2",
    "asyncpg (>=0.31.0,<0.32.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
